whatchamp/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatchamp-backend
spec:
  selector:
    app: whatchamp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000 # 컨테이너 포트
  type: NodePort # 필요에 따라 LoadBalancer로 변경 가능
