whatchamp/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress-microk8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
