whatchamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatchamp-backend
spec:
  selector:
    app: whatchamp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
